Adapt TIP #474 to current implementation

--- a/tip/474.md
+++ b/tip/474.md
@@ -61,30 +61,33 @@ X11, the "Button 4" up to "Button 7" events will be translated internally
 to equivalent "MouseWheel" events. The modifiers "Option" and "Shift"
 will be supported analogously.
 
-As an example, the new bindings for the text widget will look like this:
+The "xview scroll" and "yview scroll" commands are modified to accept
+floats in stead of integers. This doesn't mean that we can scroll
+now for 0.5 units or pages, the numbers are rounded up when positive
+and rounded down when negative. So ".w yview scroll -0.1 units" will
+have the same effect as ".w yview scroll -1 units". This way, the
+bindings don't have to do this rounding any more, as they are
+doing now.
+
+A new helper functions `tk::MouseWheel` is implemented. The
+disadvantage of the current bindings is that the `expr` expression
+needs to be parsed for every mouse move. The `tk::ScrollWheel`
+function contains the same expression, but is compiled only once.
+So, this is purely an optimization. With that, the text widget bindings
+become:
 
     bind Text <MouseWheel> {
-        %W yview scroll %D/-3 pixels
+        tk::MouseWheel %W y %D -3.0 pixels
     }
     bind Text <Option-MouseWheel> {
-        %W yview scroll %D*-3 pixels
+        tk::MouseWheel %W y %D -0.3 pixels
     }
     bind Text <Shift-MouseWheel> {
-        %W xview scroll %D/-3 pixels
+        tk::MouseWheel %W x %D -3.0 pixels
     }
     bind Text <Shift-Option-MouseWheel> {
-        %W xview scroll %D*-3 pixels
+        tk::MouseWheel %W x %D -0.3 pixels
     }
-
-with the `%D` substitution giving the right (scaled) amount of pixels.
-
-If `%D` is followed by '*' or '/', followed by an integer,
-this integer will be used as scale-factor before doing
-the `%D` substitution. The result will be rounded to the
-nearest integer (so, not the normal integer division)
-and if the result becomes 0 it will be replaced by -1 or 1.
-This is the same special case as previously implemented
-in the bindings using 'expr'.
 
 On all platforms, button 1 will be the left mouse button,
 button 2 the middle mouse button and button 3 the right
