In TIP #581, rename TkGetGeomContainer to TkGetContainer and TkGetTransientContainer to TkMacOSXGetContainer, and explain why that was done

--- a/tip/581.md
+++ b/tip/581.md
@@ -1,6 +1,6 @@
 # TIP 581: Master/Slave
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        17-July-2020
@@ -79,11 +79,11 @@ In tkDecls.h, the following `#define` is added:
 </pre>
 In tkInt.h, the following `#define` is added:
 <pre>
-\#define TkGetGeomContainer TkGetGeomMaster
+\#define TkGetContainer TkGetGeomMaster
 </pre>
 In tkIntPlatDecls.h, the following `#define` is added:
 <pre>
-\#define TkGetTransientContainer TkGetTransientMaster
+\#define TkMacOSXGetContainer TkGetTransientMaster
 </pre>
 
 Further on, the "pack"/"place"/"grid" commands will get an additional
@@ -99,6 +99,23 @@ the old name too.
 # Compatibility
 
 This is 100% upwards compatible.
+
+# Addendum
+
+After the vote completed, a discussion started whether
+`TkGetGeomContainer`/`TkGetTransientContainer` really were
+good names describing the functions well. The outcome of
+this was the decision to rename those finally to
+`TkGetContainer`/`TkMacOSXGetContainer`, therefore the
+text above was adapted accordingly. Since Tcl doesn't
+guarantee keeping internal API the same in minor releases,
+this might be changed further in Tcl 8.7, but in any future
+Tcl 8.6 release it will not change any more.
+
+<pre>
+\#define TkGetGeomContainer TkGetGeomMaster
+\#define TkGetTransientContainer TkGetTransientMaster
+</pre>
 
 # Implementation
 
