tk::ScrollWheel --> tk::MouseWheel function

--- a/tip/474.md
+++ b/tip/474.md
@@ -71,7 +71,7 @@ doing now.
 
 A new helper functions `tk::MouseWheel` is implemented. The
 disadvantage of the current bindings is that the `expr` expression
-needs to be parsed for every mouse move. The `tk::ScrollWheel`
+needs to be parsed for every mouse move. The `tk::MouseWheel`
 function contains the same expression, but is compiled only once.
 So, this is purely an optimization. With that, the text widget bindings
 become:
