--- a/tip/474.md
+++ b/tip/474.md
@@ -66,10 +66,10 @@ floats in stead of integers. This doesn't mean that we can scroll
 now for 0.5 units or pages, the numbers are rounded up when positive
 and rounded down when negative. So ".w yview scroll -0.1 units" will
 have the same effect as ".w yview scroll -1 units". This way, the
-bindings don't have to do this rounding any more, as they are
+bindings don't have to do this special rounding any more, as they are
 doing now.
 
-A new helper functions `tk::MouseWheel` is implemented. The
+A new helper function `tk::MouseWheel` is implemented. The
 disadvantage of the current bindings is that the `expr` expression
 needs to be parsed for every mouse move. The `tk::MouseWheel`
 function contains the same expression, but is compiled only once.
