Update TIP 325 specification

--- a/tip/325.md
+++ b/tip/325.md
@@ -1,5 +1,5 @@
-# TIP 325: System Tray Access
-	Author:		David N. Welton <davidw@dedasys.com>
+# TIP 325: System Tray and System Notification Access
+	Author:		David N. Welton <davidw@dedasys.com>, Kevin Walzer <kw@codebykevin.com>
 	State:		Draft
 	Type:		Project
 	Tcl-Version:	8.7
@@ -13,7 +13,9 @@
 
 Modern operating systems have a "system tray", where programs may place an
 icon to indicate program status. This TIP proposes that Tk should adopt some
-existing code in order to permit cross platform access to this functionality.
+existing code in order to permit cross platform access to this functionality. 
+This TIP also proposes to implement system notification windows, which have become 
+popular across all platforms.
 
 # Existing code
 
@@ -21,35 +23,31 @@ existing code in order to permit cross platform access to this functionality.
 
  * Linux: tktray
 
- * Mac: ???
+ * Mac: NSStatusItem
 
 Existing code is sufficient, and utilizes an acceptable license in order to
-repurpose it for a systray command.
+repurpose it for a systray command. The sysnotify command will need to be a new implementation,
+but the platform-specific API's are very straightfoward to develop this. 
 
-# Interface
+# Interface for systray
 
-To be determined by the TCT, but along the lines of what tktray provides:
+ > **-systray create** _image_ _text_ _callback_
 
- > **tktray::icon** _pathName_ ?_options_?
+Create a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback. 
 
-Create a new icon for the system tray. The application managing the system
-tray is notified about the new icon. It normally results in the icon being
-added to the tray. If there is no system tray at the icon creation time, the
-icon will be invisible. When a new system tray appears, the icon will be added
-to it. Options:
+> **-systray modify** _option?_ 
 
- **-class** _class_: WM\_CLASS attribute for the icon window. Tray manager may use
-         class name to remember icon position or other attributes.
+Modify either the image, string, or callback.
 
- **-image** _photo_: image to show in the system tray. The value must be the name of a
-         photo image. Transparency data of the photo are used to set the
-         window's shape. The icon will be automatically redrawn or resized
-         appropriately on any image modifications.
+> **-systray destroy** 
 
- **-visible** _flag_: boolean value indicating whether the icon must be visible. The
-         system tray manager continues to manage the icon whether it is
-         visible or not. Thus when invisible icon becomes visible, its
-         position on the system tray is likely to remain the same.
+Deallocate the statustray icon and remove it from view.
+
+# Interface for sysnotify
+
+> **-sysnotify notify** _title_ _message_ 
+
+Create and display a system notification with a brief title and longer body message.
 
 # Copyright
 
