Add sample code to TIP 325

--- a/tip/325.md
+++ b/tip/325.md
@@ -49,6 +49,22 @@ Deallocate the statustray icon and remove it from view.
 
 Create and display a system notification with a brief title and longer body message.
 
+# Example Code
+
+systray:
+
+	image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
+
+    systray create -image book -text "Systray sample" -callback {puts "Here is the systray output"}
+
+systnotify:
+
+	sysnotify notify "Alert" "This is just a test of the Tk System Notification Code."
+
+# Implementation 
+
+A draft implementation is currently under development in the tip_325 branch.
+
 # Copyright
 
 This document has been placed in the public domain.
