--- a/tip/325.md
+++ b/tip/325.md
@@ -17,37 +17,37 @@ existing code in order to permit cross platform access to this functionality.
 This TIP also proposes to implement system notification windows, which have become 
 popular across all platforms.
 
-# Existing code
+# Existing code and API design
 
  * Windows: winico
 
- * Linux: tktray
+ * X11: tktray
 
- * Mac: NSStatusItem
+ * Mac: New development
 
-Existing code is sufficient, and utilizes an acceptable license in order to
-repurpose it for a systray command. The sysnotify command will need to be a new implementation,
-but the platform-specific API's are very straightfoward to develop this. 
+Existing code from the winico and tktray extension packages has been refactored and ported into Tk's core; this code utilizes an acceptable license in order to repurpose it for a systray command. The sysnotify command will be a new implementation. On Windows and Mac it will make use of native system API's, and on X11 it will include a conditional dependency on libnotify, falling back to a pure-Tcl implementation (derived from the "notifywindow" tklib package) if libnotify is not present. 
+
+Both the systray and the sysnotify commands will present a script-level public API implementing the proposed interface, outlined below. The C code will implement an internal "_systray" and "_sysnotify" API owing to the significantly different designs of winico and tktray. The Mac version, while new for this TIP, will follow this general design as well.
 
 # Interface for systray
 
  > **-systray create** _image_ _text_ _callback_
 
-Create a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback. 
+Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback. 
 
 > **-systray modify** _option?_ 
 
-Modify either the image, string, or callback.
+Modifies either the image, string, or callback.
 
 > **-systray destroy** 
 
-Deallocate the statustray icon and remove it from view.
+Deallocates the statustray icon and remove it from view.
 
 # Interface for sysnotify
 
 > **-sysnotify notify** _title_ _message_ 
 
-Create and display a system notification with a brief title and longer body message.
+Creates and display a system notification with a brief title and longer body message.
 
 # Example Code
 
@@ -55,7 +55,7 @@ systray:
 
 	image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
 
-    systray create -image book -text "Systray sample" -callback {puts "Here is the systray output"}
+    systray create image book text "Systray sample" callback {puts "Here is the systray output"}
 
 systnotify:
 
@@ -68,4 +68,3 @@ A draft implementation is currently under development in the tip_325 branch.
 # Copyright
 
 This document has been placed in the public domain.
-
