--- a/tip/325.md
+++ b/tip/325.md
@@ -17,7 +17,7 @@ existing code in order to permit cross platform access to this functionality.
 This TIP also proposes to implement system notification windows, which have become 
 popular across all platforms.
 
-# Existing code and API design
+# Design
 
  * Windows: winico
 
@@ -29,7 +29,7 @@ Existing code from the winico and tktray extension packages has been refactored 
 
 Both the systray and the sysnotify commands will present a script-level public API implementing the proposed interface, outlined below. The C code will implement an internal "_systray" and "_sysnotify" API owing to the significantly different designs of winico and tktray. The Mac version, while new for this TIP, will follow this general design as well.
 
-# Interface for systray
+# Systray Interface
 
  > **-systray create** _image_ _text_ _callback_
 
@@ -43,13 +43,13 @@ Modifies either the image, string, or callback.
 
 Deallocates the statustray icon and remove it from view.
 
-# Interface for sysnotify
+# Sysnotify Interface
 
 > **-sysnotify notify** _title_ _message_ 
 
 Creates and display a system notification with a brief title and longer body message.
 
-# Example Code
+# Example
 
 systray:
 
