--- a/tip/325.md
+++ b/tip/325.md
@@ -33,7 +33,7 @@ Both the systray and the sysnotify commands will present a script-level public A
 
  > **-systray create** _image_ _text_ _callback_
 
-Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback. 
+Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback that fires on a <Button-1> event.
 
 > **-systray modify** _option?_ 
 
