Adapt text to current (MacOS) implementation

--- a/tip/325.md
+++ b/tip/325.md
@@ -45,7 +45,7 @@ Deallocates the statustray icon and remove it from view.
 
 # Sysnotify Interface
 
-> **-sysnotify notify** _title_ _message_ 
+> **-sysnotify** _title_ _message_ 
 
 Creates and display a system notification with a brief title and longer body message.
 
@@ -53,13 +53,13 @@ Creates and display a system notification with a brief title and longer body mes
 
 systray:
 
-	image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
+    image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
 
-    systray create image book text "Systray sample" callback {puts "Here is the systray output"}
+    systray create book "Systray sample" {puts "Here is the systray output"}
 
-systnotify:
+sysnotify:
 
-	sysnotify notify "Alert" "This is just a test of the Tk System Notification Code."
+    sysnotify "Alert" "This is just a test of the Tk System Notification Code."
 
 # Implementation 
 
