TIP's #474 and #587 in voting state

--- a/tip/587.md
+++ b/tip/587.md
@@ -2,8 +2,9 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Created:        20-Sept-2020
-	Post-History:   
+	Post-History:
 	Keywords:       Tcl source
 	Tcl-Version:    9.0
 	Tcl-Branch:     tip-587
@@ -51,7 +52,7 @@ change should be made for Tcl 9.0 only.
    they are now.
  * The fallback for the system encoding will change to "utf-8" on all platforms.
    Tcl 9.0 only.
- 
+
  This TIP is basically for 9.0. But all changes can be made on 8.7
  with almost no risk, except for the last one. Therefore, there will be
  separate votes for bringing this to 9.0 and bringing it (except for
