--- a/tip/474.md
+++ b/tip/474.md
@@ -3,7 +3,7 @@
 	Author:	Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:	Draft
 	Type:	Project
-	Vote:	Pending
+	Vote:	In progress
 	Created:	25-Aug-2017
 	Post-history:	PM
 	Tcl-Version:	8.7
@@ -42,9 +42,9 @@ platforms and use the mouse wheel in the canvas window to see which
 bindings fired.
 
     pack [canvas .c]
-    
+
     catch {console show}
-    
+
     bind .c <Button> [list puts "Button %W %b"]
     bind .c <Shift-Button> [list puts "Shift-Button %W %b"]
     bind .c <Control-Button> [list puts "Control-Button %W %b"]
@@ -63,7 +63,7 @@ will be supported analogously.
 
 The "xview scroll" and "yview scroll" commands are modified to accept
 floats in stead of integers. This doesn't mean that we can scroll
-now for 0.5 units or pages, the numbers are rounded up when positive
+for 0.5 units or pages now, the numbers are rounded up when positive
 and rounded down when negative. So ".w yview scroll -0.1 units" will
 have the same effect as ".w yview scroll -1 units". This way, the
 bindings don't have to do this special rounding any more, as they are
@@ -91,17 +91,18 @@ become:
 
 On all platforms, button 1 will be the left mouse button,
 button 2 the middle mouse button and button 3 the right
-mouse button. In Tk 8.6, MacOS has always swapped
-buttons 2 and 3. In Tk 8.7, Tk will do the swapping for us.
+mouse button. In Tk 8.6 and earlier, MacOS always defined
+buttons 2 and 3 differently. In Tk 8.7, Tk will do the
+swapping for us.
 
 # Considerations regarding the incompatibility
 
-The physical buttons 4 up to 9 on Windows or Mac, will be
+The physical buttons 4 up to 9 on Windows or MacOS, will be
 translated to X11 buttons 8 up to 13. From the script level
-nothing changes: The buttons still can be accessed from scripts
-as being buttons 4 up to 9. This means that X11 buttons 4 to 7
-are not accessible through script any more, the
-only way to access those are through the translated
+nothing changes: The buttons still can be accessed from
+scripts as being buttons 4 up to 9. This means that X11
+buttons 4 to 7 are not accessible through script any more,
+the only way to access those are through the translated
 MouseWheel events. On X11, buttons 4 up to 9 in scripts
 will handle the X11 buttons numbered 8 up to 13.
 
