tweak TIP #577 and give it a better title

--- a/tip/577.md
+++ b/tip/577.md
@@ -1,4 +1,4 @@
-# TIP 577: Strict index values
+# TIP 577: Enhanced index values for Tk
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -11,8 +11,21 @@
 
 # Abstract
 
-Various commands handle errors in "index" values differently. This TIP attempts to treat the different
-uses of index values in Tk to a more uniform way.
+Various commands handle errors in "index" values differently. This TIP attempts
+to treat the different uses of index values in Tk to a more uniform way, align
+them better with index usage in Tcl.
+
+The main feature of this TIP is to let Tk indices handle all forms of Tcl indices.
+So "4+5" and "end-1" will now be accepted, just as any other form accepted by
+`Tcl_GetIntFormIndex()` (See also TIP #544).
+
+In addition, the empty string is accepted in Tk as valid index. It means the same
+as `-1` so _not available_. In Tk this is more natural, since the default of many
+options is already the empty string. The default value of the `-underline` option
+so because the empty string, and setting `-underline` to the empty string means
+no underlining. This default value change will be only done when Tk is compiled
+with Tk 9.0 headers, in order to give applications more time to adapt to this
+usage (see _Compatibility_ section below).
 
 # Rationale
 
@@ -33,27 +46,42 @@ none
 bad menu entry index "foo"
 </pre>
 
-Changing any of the above examples to give a different answer is not possible in the Tcl 8.x timeline,
-as it could cause applications to break unexpectedly. But this examples make it clear that the
-responses `-1` and `none` are used often to mean the same thing. For Tcl 9 more can be done, but
-more investigation is needed to determine whether  the empty string would be a better fit here. Also,
-whether a command gives an error-message on an invalid index or bails out cannot be changed in the
-Tcl 8.x timeline.
+We see that menu's have a different way to indicate 'not found' compared to other widgets.
+
+A request is done already a long time ago, to make index handling in Tk more flexible.
+See:  [`widgets indices enhancement`](https://core.tcl-lang.org/tk/tktview?name=1ef1ae2177)
+This TIP implements part of this request (only the `active-int` form is not implemented.
+
 
 # Specification
 
-  * For Tk, start accepting the empty string as index for entries, listboxes, menus .....
-    and also for button and menu-related `-underline` options. A new `TK_OPTION_INDEX` option is implemented,
-    which is almost the same as `TK_OPTION_INT`, but in stead of only integers, accepts all index forms as well. 
-    See:  [`widgets indices enhancement`](https://core.tcl-lang.org/tk/tktview?name=1ef1ae2177)
-  * When Tk is compiled with Tcl 9 headers, the default `-underline` value becomes the empty string
-    in stead of -1.
-  * When Tk is compiled with Tcl 9 headers, all commands which currently report "not-found" as
-    `-1`, will start returning the empty string in stead.
+  * Tk indices (e.g. the value of the `-underline` option) will accept all forms
+    accepted by `Tcl_GetIntFromIndex()`, and also the empty string meaning _not available_.
+    So `-underline end-1` means underline one character before the last one of the string.
+  * Indices in menu's, which currently use `none` as default, will be changed to use
+    the empty string as default. The use of `none` in menu's is now considered
+    deprecated, but still supported as long as Tk is compiled with Tcl 8.x headers.
+  * Start accepting the empty string as index for entries, listboxes, menus .....
+    just as for button and menu-related `-underline` options. A new `TK_OPTION_INDEX`
+    option is implemented, which is almost the same as `TK_OPTION_INT`, but in stead
+    of only integers, accepts all those index forms as well. 
+  * When Tk is compiled with Tcl 9 headers, the default `-underline` value becomes
+    the empty string in stead of -1. When compiled with Tcl 8 headers, `-1` is still
+    the default.
+  * When Tk is compiled with Tcl 9 headers, all commands which currently report
+    _not available_ as `-1`, will start returning the empty string in stead.
 
 # Compatibility
 
-TODO
+When compiled with Tcl 8.x headers, this is almost 100% compatible. Except for
+menu commands which currently use the inconsistent `none` keyword (see above example)
+they will start returning the empty string.
+
+Code can easily be made compatible in any environment. Just don't check against
+the value `-1` any more, but use the `< 0` check: Since comparing the empty
+string with `0` in Tcl uses string compare, it gives the same result as
+comparing `-1` with `0`. All Tk utilities and demo's are already modified to
+do this check consistently.
 
 # Implementation
 
