Update TIP 325 with tk namespace labels

--- a/tip/325.md
+++ b/tip/325.md
@@ -27,21 +27,21 @@ popular across all platforms.
 
 Existing code from the winico and tktray extension packages has been refactored and ported into Tk's core; this code utilizes an acceptable license in order to repurpose it for a systray command. The sysnotify command will be a new implementation. On Windows and Mac it will make use of native system API's, and on X11 it will include a conditional dependency on libnotify, falling back to a pure-Tcl implementation (derived from the "notifywindow" tklib package) if libnotify is not present. 
 
-Both the systray and the sysnotify commands will present a script-level public API implementing the proposed interface, outlined below. The C code will implement an internal "_systray" and "_sysnotify" API owing to the significantly different designs of winico and tktray. The Mac version, while new for this TIP, will follow this general design as well.
+Both the tk systray and the tk sysnotify commands will present a script-level public API implementing the proposed interface, outlined below. The C code will implement an internal "_systray" and "_sysnotify" API owing to the significantly different designs of winico and tktray. The Mac version, while new for this TIP, will follow this general design as well.
 
 # Systray Interface
 
- > **-systray create** _image_ _text_ _callback_
+ > **-tk systray create** _image_ _text_ _callback_
 
 Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback that fires on a <Button-1> event.
 
-> **-systray modify** _option?_ 
+> **-tk systray modify** _option?_ 
 
 Modifies either the image, string, or callback.
 
 # Sysnotify Interface
 
-> **-sysnotify** _title_ _message_ 
+> **-tk sysnotify** _title_ _message_ 
 
 Creates and display a system notification with a brief title and longer body message.
 
@@ -51,11 +51,11 @@ systray:
 
     image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
 
-    systray create book "Systray sample" {puts "Here is the systray output"}
+    tk systray create book "Systray sample" {puts "Here is the systray output"}
 
 sysnotify:
 
-    sysnotify "Alert" "This is just a test of the Tk System Notification Code."
+    tk sysnotify "Alert" "This is just a test of the Tk System Notification Code."
 
 # Implementation 
 
