Add <Button-3> callback to TIP 325

--- a/tip/325.md
+++ b/tip/325.md
@@ -33,7 +33,7 @@ Both the tk systray and the tk sysnotify commands will present a script-level pu
 
  > **tk systray create** _image_ _text_ _callback_
 
-Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and an optional callback that fires on a <Button-1> event.
+Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and optional callbacks that fire on a <Button-1>  or <Button-3> event.
 
 > **tk systray modify** _option?_ 
 
