Minor editorial changes

--- a/tip/563.md
+++ b/tip/563.md
@@ -1,4 +1,4 @@
-# TIP 563: scrollwheel on horizontal scrollbar scrolls without shift too
+# TIP 563: Scrollwheel on Horizontal Scrollbar Scrolls Without Shift too
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Final
 	Type:           Project
