--- a/tip/564.md
+++ b/tip/564.md
@@ -1,4 +1,4 @@
-# TIP 564: ttk font sizes in points
+# TIP 564: Specify ttk font sizes in points on X11
 	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
@@ -12,11 +12,11 @@
 
 # Abstract
 
-This TIP proposes to change the font sizes defined for ttk widgets on x11 from absolute sizes to sizes in points.
+This TIP proposes to change the font sizes defined for ttk widgets on X11 from absolute sizes to sizes in points.
 
 # Rationale
 
-Currently, the fonts defined for Ttk on x11 in library/ttk/fonts.tcl are specified as absolute numbers of pixels:
+Currently, the fonts defined for Ttk on X11 in library/ttk/fonts.tcl are specified as absolute numbers of pixels:
 
 <pre>
 	set F(size) -12
@@ -41,7 +41,7 @@ This is the purpose of the present proposal.
 
 # Specification
 
-Apply patch [b441746a60](https://core.tcl-lang.org/tk/info/b441746a60). This is a change for x11 only.
+Apply patch [b441746a60](https://core.tcl-lang.org/tk/info/b441746a60). This is a change for X11 only.
 
 On Windows and macOS Ttk font sizes are already set in points in library/ttk/fonts.tcl so there is nothing to change.
 
