--- a/tip/586.md
+++ b/tip/586.md
@@ -1,27 +1,27 @@
-# TIP 586: binary scan to support C strings
+# TIP 586: C String Parsing Support for binary scan
 	Author:         Christian Werner <undroidwish@googlemail.com>
 	State:          Draft
 	Type:           Project
 	Created:        18-Sep-2020
 	Post-History:   
 	Keywords:       binary
-	Tcl-Version:    8.6 or later
+	Tcl-Version:    8.7
 -----
 
 # Abstract
 
-This TIP proposes to add another scan rule to the <b>binary scan</b> command in order to be able to deal with NUL terminated C strings.
+This TIP proposes to add another scan rule to the `binary scan` command in order to be able to deal with NUL terminated C strings.
 
 # Rationale
 
 NUL terminated C strings are common place but currently not directly supported
-by the <b>binary scan</b> command. There's the scan format <b>A</b> which trims
+by the `binary scan` command. There's the scan format `A` which trims
 trailing space and NULs but it starts that trim process from the field's end
 backwards. In order to get C string semantics, that scan must be performed
 from the field's start and terminated upon detection of the first NUL.
 
-The proposal of this TIP is therefore to add a <b>binary scan</b> format
-letter <b>C</b> which performs the aforementioned scan termination rule.
+The proposal of this TIP is therefore to add a `binary scan` format
+letter `C` which performs the aforementioned scan termination rule.
 
 # Implementation
 
