--- a/tip/565.md
+++ b/tip/565.md
@@ -1,4 +1,4 @@
-# TIP 565: .canvas raise/lower ignore non-existent tag
+# TIP 565: Gracefully ignore non-existent tags in canvas raise/lower
 	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
@@ -12,11 +12,11 @@
 
 # Abstract
 
-This TIP proposes to let the <b>.canvas raise</b> and <b>.canvas lower</b> do nothing gracefully when receiving non-existing tagOrIds respectively as "aboveThis" and "belowThis" argument.
+This TIP proposes to let the `.canvas raise` and `.canvas lower` do nothing gracefully when receiving non-existing _tagOrIds_ respectively as _aboveThis_ and _belowThis_ arguments.
 
 # Rationale
 
-Ticket [3437816fff](https://core.tcl-lang.org/tk/info/3437816fff) pointed out that <b>.canvas raise $tagOrId1 $tagOrId2</b> and <b>.canvas lower $tagOrId1 $tagOrId2</b> were not symmetrical in their error cases management: the former returned an error when $tagOrId2 does not exist, but the latter did not. This was fixed in 2011 by making the latter return the same error as the former.
+Ticket [3437816fff](https://core.tcl-lang.org/tk/info/3437816fff) pointed out that `.canvas raise $tagOrId1 $tagOrId2` and `.canvas lower $tagOrId1 $tagOrId2` were not symmetrical in their error cases management: the former returned an error when `$tagOrId2` does not exist, but the latter did not. This was fixed in 2011 by making the latter return the same error as the former.
 
 This change broke some software in the wild, see for instance [this Debian ticket](http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=719109) or [that Tk ticket]  (https://core.tcl-lang.org/tk/tktview/3552805fff).
 
