--- a/tip/325.md
+++ b/tip/325.md
@@ -37,7 +37,7 @@ Creates a new icon for the system tray with a Tk image, a string for display in 
 
 > **tk systray modify** _option?_ 
 
-Modifies either the image, string, or callback.
+Modifies either the image, string, or callback (Button-1 or Button-3).
 
 # Sysnotify Interface
 
