--- a/tip/325.md
+++ b/tip/325.md
@@ -31,7 +31,7 @@ Both the tk systray and the tk sysnotify commands will present a script-level pu
 
 # Systray Interface
 
- > **tk systray create** _image_ _text_ _callback_
+ > **tk systray create** _image_ _text_ _b1\_\callback_ _b3\_\callback_
 
 Creates a new icon for the system tray with a Tk image, a string for display in a tooltip, and optional callbacks that fire on a Button-1  or Button-3 event.
 
@@ -51,7 +51,7 @@ systray:
 
     image create photo book -data R0lGODlhDwAPAKIAAP//////AP8AAMDAwICAgAAAAAAAAAAAACwAAAAADwAPAAADSQhA2u5ksPeKABKSCaya29d4WKgERFF0l1IMQCAKatvBJ0OTdzzXI1xMB3TBZAvATtB6NSLKleXi3OBoLqrVgc0yv+DVSEUuFxIAOw==
 
-    tk systray create book "Systray sample" {puts "Here is the systray output"}
+    tk systray create book "Systray sample" {puts "Here is the systray output"} {puts "here is another example"}
 
 sysnotify:
 
