TIP's #474 and #587 now final

--- a/tip/474.md
+++ b/tip/474.md
@@ -1,9 +1,13 @@
 # TIP 474: Treat the mouse wheel events in a uniform way
 	Author:	Arjen Markus <arjen.markus895@gmail.com>
 	Author:	Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:	Draft
+	State:	Final
 	Type:	Project
-	Vote:	In progress
+	Vote:           Done
+	Vote-Summary:   Accepted 7/0/2
+	Votes-For:      BG, DKF, FV, JN, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  DGP, KBK
 	Created:	25-Aug-2017
 	Post-history:	PM
 	Tcl-Version:	8.7
