--- a/tip/587.md
+++ b/tip/587.md
@@ -1,8 +1,12 @@
 # TIP 587: Default utf-8 for source command
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
+	Vote-Summary:   Accepted 9/0/0
+	Votes-For:      BG, DGP, DKF, FV, JN, KBK, KW, MC, SL
+	Votes-Against:  none
+	Votes-Present:  none
 	Created:        20-Sept-2020
 	Post-History:
 	Keywords:       Tcl source
