Added implementation for TIP586

--- a/tip/586.md
+++ b/tip/586.md
@@ -6,6 +6,7 @@
 	Post-History:   
 	Keywords:       binary
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-586-binary-scan-c-string
 -----
 
 # Abstract
