New TIP #589: Deprecate "-fg", "-bg", "-bd" options in Tk

--- a/tip/588.md
+++ b/tip/588.md
@@ -72,6 +72,10 @@ be actually unavailable. This can be used to test your scripts, whether
 they actually still use deprecated features. But this compile flag is
 not recommended to be used in production.
 
+# Compatibility
+
+This is fully upwards compatible with Tk 8.6, but not with Tk 8.7a3.
+
 # Reference Implementation
 
 In tk branch keysym-unicode
