TIP #589 to Withdrawn state

--- a/tip/566.md
+++ b/tip/566.md
@@ -1,5 +1,5 @@
 # TIP 566: Index usage in lset
-	Author:         Jan Nijtmans <jan.nijtmans@gmail.conm>
+	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Withdrawn
 	Type:           Project
 	Vote:           Pending
