--- a/tip/589.md
+++ b/tip/589.md
@@ -1,6 +1,6 @@
 # TIP 589: Deprecate "-fg", "-bg", "-bd" options in Tk.
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Withdrawn
 	Type:           Project
 	Vote:           Pending
 	Created:        27-Oct-2020
