--- a/tip/582.md
+++ b/tip/582.md
@@ -2,7 +2,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        13-Aug-2020
 	Post-History:
 	Keywords:       Tcl
