TIP's 586/588 now in Voting

--- a/tip/586.md
+++ b/tip/586.md
@@ -2,8 +2,9 @@
 	Author:         Christian Werner <undroidwish@googlemail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           In progress
 	Created:        18-Sep-2020
-	Post-History:   
+	Post-History:
 	Keywords:       binary
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-586-binary-scan-c-string
@@ -42,21 +43,21 @@ for most current branches on http://core.tcl-lang.org/tcl:
 +	case 'A':
 +	case 'C': {
  	    unsigned char *src;
- 
+
  	    if (arg >= objc) {
  		DeleteScanNumberCache(numberCachePtr);
  		goto badIndex;
 @@ -1337,14 +1338,22 @@
- 
+
  	    src = buffer + offset;
  	    size = count;
- 
+
  	    /*
 -	     * Trim trailing nulls and spaces, if necessary.
 +	     * Apply C string semantics or trim trailing
 +	     * nulls and spaces, if necessary.
  	     */
- 
+
 -	    if (cmd == 'A') {
 +	    if (cmd == 'C') {
 +		for (i = 0; i < size; i++) {
