--- a/tip/588.md
+++ b/tip/588.md
@@ -2,9 +2,9 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        23-Oct-2020
-	Post-History:   
+	Post-History:
 	Keywords:       X11
 	Tcl-Version:    8.7
 	Tk-Branch:	keysym-unicode
