--- a/tip/590.md
+++ b/tip/590.md
@@ -60,9 +60,9 @@ compares are used when handling package names.
 
 # Specification
 
-* All remains of case-insensitive package handling (mainly in
-tclLoad.c) are eliminated. The "package" mechanism becomes
-fully case-insensitive, the strange behaviour as described
+* All remains of case-insensitive handling of package names
+(mainly in tclLoad.c) are eliminated. The "package" mechanism
+becomes fully case-sensitive, the strange behaviour as described
 above can no longer be observed but is considered an error.
 
 * Package names can be UPPERCASE, lowercase, CamelCase, all
@@ -73,11 +73,13 @@ can live happily side-by-side.
 TIP proposes to rename some packages. The old package names
 are kept as well.
 
-    - TclOO   ⟶ tcl::oo
-    - zipfs   ⟶ tcl::zipfs
-    - zlib    ⟶ tcl::zlib
-    - Tcl     ⟶ tcl
-    - Tk     ⟶ tk
+    - TclOO   ⟶  tcl::oo
+    - zipfs   ⟶  tcl::zipfs
+    - zlib    ⟶  tcl::zlib
+    - Tcl     ⟶  tcl
+    - Tcltest ⟶  tcl::test
+    - Tk      ⟶  tk
+    - Tktest  ⟶  tk::test
 
 This means that both "package require tcl" and "package require Tcl"
 can be used interchangably. But "package require TCL" won't work.
