Add links to 590

--- a/tip/590.md
+++ b/tip/590.md
@@ -15,12 +15,12 @@
 This TIP proposes to make the Tcl package mechanism fully
 case-sensitive.
 
-This TIP is - at first sight - the opposite of TIP #339, which
+This TIP is - at first sight - the opposite of [TIP #339](339.md), which
 was rejected at that time. However the goal is the same: Make
 it possible to start using lowercase package names while
 still keeping maximum compatibility with Tcl 8.5/8.6.
 
-Quote from TIP #339 which also applies to this TIP: "Most people
+Quote from [TIP #339](339.md) which also applies to this TIP: "Most people
 will likely simply start to write all package names lower-case after this change".
 
 # Rationale
