--- a/tip/590.md
+++ b/tip/590.md
@@ -62,11 +62,11 @@ compares are used when handling package names.
 
 * All remains of case-insensitive handling of package names
 (mainly in tclLoad.c) are eliminated. The "package" mechanism
-becomes fully case-sensitive, the strange behaviour as described
+becomes fully case-sensitive, the strange behavior as described
 above can no longer be observed but is considered an error.
 
 * Package names can be UPPERCASE, lowercase, CamelCase, all
-different forms are considered separate packages which
+different forms are considered distinct packages which
 can live happily side-by-side.
 
 * In order to bring some consistency in package names, this
@@ -102,7 +102,7 @@ be camelcased any more.
 # Compatibility
 
 This is almost compatible with Tcl 8.5/8.6, except for the
-current strange behaviour of the "load" command, which
+current strange behavior of the "load" command, which
 will no longer work case-insensitive.
 
 # Reference Implementation
